# static-website-host

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs  state.rs  www.rs
