[package]
name = "static-website-host"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Lut99/static-website-host"
description = "An `axum-`based webserver that can be used to do simple static website hosting."


[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["async-read-body"] }
axum-macros = { version = "0.4", optional = true }
clap = { version = "4.5", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
hyper = "1.4"
hyper-util = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.10"
tokio = { version = "1.38", default-features = false, features = ["fs", "macros", "rt", "rt-multi-thread", "signal"]}
tower-service = "0.3"


[features]
axum-debug = ["dep:axum-macros"]
